--- a/index.html
+++ b/index.html
@@ -6,6 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>USANA 권미경 | 건강과 재정적 자유를 디자인하다</title>
     <meta name="description" content="유사나(USANA) 독립 디스트리뷰터 권미경입니다. 진정한 건강 관리와 평생 소득을 위한 플랫폼 비즈니스 기회를 제공합니다. 1:1 맞춤 멘토링과 검증된 시스템으로 당신의 성공을 돕겠습니다." />
+    
+    <!-- Open Graph / Facebook / KakaoTalk -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="USANA 권미경 | 건강과 재정적 자유를 디자인하다" />
+    <meta property="og:description" content="유사나(USANA) 독립 디스트리뷰터 권미경입니다. 진정한 건강 관리와 평생 소득을 위한 플랫폼 비즈니스 기회를 제공합니다." />
+    <meta property="og:image" content="https://cdn.pixabay.com/photo/2021/09/03/15/37/mountain-6596074_640.jpg" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="USANA 권미경 | 건강과 재정적 자유를 디자인하다" />
+    <meta name="twitter:description" content="유사나(USANA) 독립 디스트리뷰터 권미경입니다. 진정한 건강 관리와 평생 소득을 위한 플랫폼 비즈니스 기회를 제공합니다." />
+    <meta name="twitter:image" content="https://cdn.pixabay.com/photo/2021/09/03/15/37/mountain-6596074_640.jpg" />
+
     <!-- Google Fonts: Noto Sans KR -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
